--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 .container{
-   background-color: rgb(3, 211, 83);
+   background-color: rgb(78, 13, 64)
    padding: 20px; 
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(37, 29, 29, 0.1);
